Revision history for Text-XLogfile

0.04
        Document that we chomp input on parse_xlogline.

0.03    Sat Aug  4 01:44:29 2007
        More minor fixes.

0.02    Sat Aug  4 00:31:15 2007
        Minor fixes.

0.01    Fri Aug  3 22:03:17 2007
        First version, released on an unsuspecting world.
